--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.1.0' %}
+{% set version = '1.1.1' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -12,16 +12,23 @@ source:
   url:
     - https://cran.r-project.org/src/contrib/desc_{{ version }}.tar.gz
     - https://cran.r-project.org/src/contrib/Archive/desc/desc_{{ version }}.tar.gz
-  sha256: f94ac3c0a03504ec845f945e77f3b0ad5ef9abf2cefcfe9fd1477acc63958155
+  sha256: 32ff99b658db3bf0172cf30d15b7f34021144ffc08a5896afd3d30055fc4074c
+
+
+  # patches:
+   # List any patch files here
+   # - fix.patch
 
 build:
+  # If this is a new build for the same version, increment the build number.
   number: 0
-  skip: true  # [win32]
 
+  # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
+# Suggests: covr, testthat, whoami, withr
 requirements:
   build:
     - r-base
@@ -39,12 +46,19 @@ requirements:
 
 test:
   commands:
-    - $R -e "library('desc')"  # [not win]
+    # You can put additional test commands to be run here.
+    - $R -e "library('desc')"           # [not win]
     - "\"%R%\" -e \"library('desc')\""  # [win]
 
+  # You can also put a file called run_test.py, run_test.sh, or run_test.bat
+  # in the recipe that will be run at test time.
+
+  # requires:
+    # Put any additional test requirements here.
+
 about:
-  home: https://github.com/r-pkgs/desc
-  license: MIT
+  home: https://github.com/r-lib/desc#readme
+  license: MIT + file LICENSE
   summary: Tools to read, write, create, and manipulate DESCRIPTION files. It is intended for
     packages that create or manipulate other packages.
   license_family: MIT
@@ -53,3 +67,32 @@ extra:
   recipe-maintainers:
     - johanneskoester
     - bgruening
+    - mingwandroid
+
+# The original CRAN metadata for this package was:
+
+# Package: desc
+# Title: Manipulate DESCRIPTION Files
+# Version: 1.1.1
+# Authors@R: c( person("Gabor", "Csardi",, "csardi.gabor@gmail.com", role = c("aut", "cre")), person("Kirill", "Muller", role = c("aut")))
+# Maintainer: Gabor Csardi <csardi.gabor@gmail.com>
+# Description: Tools to read, write, create, and manipulate DESCRIPTION files. It is intended for packages that create or manipulate other packages.
+# License: MIT + file LICENSE
+# LazyData: true
+# URL: https://github.com/r-lib/desc#readme
+# BugReports: https://github.com/r-lib/desc/issues
+# Depends: R (>= 3.1.0)
+# Suggests: covr, testthat, whoami, withr
+# Imports: assertthat, utils, R6, crayon, rprojroot
+# Encoding: UTF-8
+# RoxygenNote: 5.0.1.9000
+# Collate: 'assertions.R' 'authors-at-r.R' 'classes.R' 'collate.R' 'constants.R' 'deps.R' 'description.R' 'encoding.R' 'latex.R' 'non-oo-api.R' 'package-archives.R' 'read.R' 'remotes.R' 'str.R' 'syntax_checks.R' 'urls.R' 'utils.R' 'validate.R' 'version.R'
+# NeedsCompilation: no
+# Packaged: 2017-08-03 09:45:28 UTC; gaborcsardi
+# Author: Gabor Csardi [aut, cre], Kirill Muller [aut]
+# Repository: CRAN
+# Date/Publication: 2017-08-03 15:22:33 UTC
+
+# See
+# http://docs.continuum.io/conda/build.html for
+# more information about meta.yaml
