--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,8 @@ package:
 source:
   fn: desc_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/desc_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/desc/desc_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/desc_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/desc/desc_{{ version }}.tar.gz
   sha256: 32ff99b658db3bf0172cf30d15b7f34021144ffc08a5896afd3d30055fc4074c
 
 
